--- a/index.html
+++ b/index.html
@@ -3,45 +3,81 @@
 
 <head>
     <title>
-        Gio Barreto Graphic Designer Services
+        Gio Barreto Graphic Designer
     </title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="UTF-8">
 </head>
 
 <body>
-    <header id="home" class="header">
+    <header id="nav" class="header">
         <div class="container logo-nav-container">
-            <a href="#" class="logo">LOGO</a>
+            <a href="#" class="logo"><img src="img/gio_name.png" alt=""></a>
             <nav class="navigation">
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about_me">About me</a></li>
-                    <li><a href="#">My Aspirations</a></li>
-                    <li><a href="#">Why Holberton?</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#my_aspiration">My Aspirations</a></li>
+                    <li><a href="#why-holberton">Why Holberton?</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    </div>
+
 
     <main class="main">
-        <section id="home" class="section">
-            <!-- <img class="hero-img" src="image/gio_barreto.jpg"> -->
-        </section>
 
-        <div id="about_me" class="section">
-            <div class="text-content">
-                <h1>About me</h1>
+        <img id="home" class="hero-img" src="img/gio_barreto.jpg">
+
+        <Section id="about_me" class="section-one">
+
+            <div class="box-text-1">
+                <h2>About Me</h2>
+                <p> My name is Giovanni Barreto. I am a freelance graphic designer from Vega Alta, Puerto Rico. I am an enthusiastic, self-motivated, reliable, responsible, and hard-working person. I am a mature team worker and adaptable to all challenging
+                    situations. I can work well both in a team environment as well as using own initiative. </p>
             </div>
-            <div class="img-wrapper">
-                <img class="gioim" src="image/1.jpg">
+
+            <div class="slider">
+                <!-- <img src="img/foto1.png" alt="Error Image"> -->
+                <ul>
+                    <li class="slider"><img src="img/foto2.jpg" alt="error"></li>
+                    <li class="slider"><img src="img/foto3.jpg" alt="error"></li>
+                    <li class="slider"><img src="img/foto4.jpg" alt="error"></li>
+                </ul>
+
             </div>
-        </div>
+        </Section>
+
+        <Section id="my_aspiration" class="section-two">
+            <h2>My Aspirations</h2>
+            <p>For the past 3 years, I got the opportunity to grow as a graphic designer and continue learning about advertisement and marketing. During this journey, I had the chance to work with webpage projects that motivated me to continue exploring
+                the world of developers. Today, I want to have the chance to participate in the Holberton School Program to learn, understand and dominate the web developer’s environment. </p>
+        </Section>
+
+        <Section class="section-tree">
+
+            <div class="text-box-1">
+                <h2 id="why-holberton">Why Holberton?</h2>
+                <p></p>
+            </div>
+
+
+
+        </Section>
+
+        <Section id="contact" class="section-four">
+            <h2>Contact</h2>
+            <p></p>
+        </Section>
     </main>
+
     <footer class="footer">
         <p>Powered by Giovanni Barreto</p>
     </footer>
 </body>
+
+
 
 </html>
