--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                 the world of developers. Today, I want to have the chance to participate in the Holberton School Program to learn, understand and dominate the web developer’s environment. </p>
         </Section>
 
-        <Section class="section-tree">
+        <Section id="why-holberton" class="section-tree">
 
             <div class="text-box-1">
-                <h2 id="why-holberton">Why Holberton?</h2>
+                <h2>Why Holberton?</h2>
                 <p></p>
             </div>
 
